Show saints in the widget

--- a/CalendarWidget/Base.lproj/MainInterface.storyboard
+++ b/CalendarWidget/Base.lproj/MainInterface.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="450" height="350"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9fX-B8-zKn">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9fX-B8-zKn">
                                 <rect key="frame" x="94" y="75" width="250" height="220"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -59,49 +59,49 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9am-Uv-GPx">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9am-Uv-GPx">
                                 <rect key="frame" x="107" y="46" width="30" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-CW-iNH">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-CW-iNH">
                                 <rect key="frame" x="146" y="44" width="34" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="7" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-FA-zQD">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="7" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-FA-zQD">
                                 <rect key="frame" x="343" y="46" width="26" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-AV-ixB">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-AV-ixB">
                                 <rect key="frame" x="188" y="44" width="32" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-kj-jcG">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-kj-jcG">
                                 <rect key="frame" x="227" y="44" width="39" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWg-PT-A9O">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWg-PT-A9O">
                                 <rect key="frame" x="270" y="45" width="31" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="F" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZc-T5-mjZ">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="F" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZc-T5-mjZ">
                                 <rect key="frame" x="308" y="46" width="27" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
@@ -142,6 +142,19 @@
                                     <action selector="nextMonth:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="yLS-dH-jEf"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vF4-zE-F8V">
+                                <rect key="frame" x="91" y="299" width="250" height="32"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Memory of saints">
+                                        <attributes>
+                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="15" name="HelveticaNeue"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -149,6 +162,7 @@
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="9am-Uv-GPx" secondAttribute="bottom" id="2w4-gG-a8w"/>
                             <constraint firstItem="gqY-AV-ixB" firstAttribute="leading" secondItem="fEv-CW-iNH" secondAttribute="trailing" id="6Wl-pg-cFi"/>
                             <constraint firstItem="fEv-CW-iNH" firstAttribute="leading" secondItem="9am-Uv-GPx" secondAttribute="trailing" id="8on-CW-FFB"/>
+                            <constraint firstItem="vF4-zE-F8V" firstAttribute="leading" secondItem="9fX-B8-zKn" secondAttribute="leading" id="92f-Sa-Iyz"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="leading" secondItem="WTw-u1-FV9" secondAttribute="leading" id="BHe-th-I6n"/>
                             <constraint firstItem="zrE-CB-5D9" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="CVl-1V-2ow"/>
                             <constraint firstItem="hAd-50-Nmq" firstAttribute="leading" secondItem="zrE-CB-5D9" secondAttribute="trailing" id="EHD-9d-epy"/>
@@ -163,10 +177,12 @@
                             <constraint firstItem="gqY-AV-ixB" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="Nba-yM-M6u"/>
                             <constraint firstItem="9am-Uv-GPx" firstAttribute="leading" secondItem="9fX-B8-zKn" secondAttribute="leading" id="Oug-Cm-Rxx"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="Qnf-BG-BJO"/>
+                            <constraint firstItem="vF4-zE-F8V" firstAttribute="top" secondItem="9fX-B8-zKn" secondAttribute="bottom" constant="5" id="RiA-zE-XIo"/>
                             <constraint firstItem="hAd-50-Nmq" firstAttribute="trailing" secondItem="9fX-B8-zKn" secondAttribute="trailing" id="T7u-30-X8J"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="9fX-B8-zKn" secondAttribute="bottom" constant="5" id="TB8-Zq-e6t"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="6Lp-kj-jcG" secondAttribute="bottom" id="Tgn-Pu-Ktn"/>
                             <constraint firstItem="tZc-T5-mjZ" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="X79-UQ-8Ss"/>
+                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="vF4-zE-F8V" secondAttribute="bottom" constant="5" id="Ze4-Ls-H1f"/>
+                            <constraint firstItem="vF4-zE-F8V" firstAttribute="trailing" secondItem="9fX-B8-zKn" secondAttribute="trailing" id="bFa-Zr-nT4"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="tZc-T5-mjZ" secondAttribute="bottom" id="cBh-9x-wV7"/>
                             <constraint firstItem="hAd-50-Nmq" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="ebA-Wl-cSh"/>
                             <constraint firstItem="eWg-PT-A9O" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="gC5-9I-4bW"/>
@@ -189,6 +205,7 @@
                         <outlet property="buttonRight" destination="hAd-50-Nmq" id="4sL-dH-aug"/>
                         <outlet property="collectionView" destination="9fX-B8-zKn" id="dTm-nI-PIS"/>
                         <outlet property="monthLabel" destination="zrE-CB-5D9" id="aLy-t7-Ef0"/>
+                        <outlet property="saintsLabel" destination="vF4-zE-F8V" id="eBX-6F-dSR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
